# G2_67_Jr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  T84D_REFACTOR_REPORT.md
backend/: Cargo.toml  README.md  openapi.json
backend/.sqlx/: query-67ee19d49832dd927edafd5bc874b722369d2c74c9d9cf9593fe26b8bfb8455a.json  query-b47b641c0a68899c4d261e214d3bba7a00670a9f3f56271ae409bee358be0ccb.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: authz.rs  error.rs  lib.rs  main.rs  metering.rs  metrics.rs  pool.rs  queue.rs  roles.rs  storage.rs  vector.rs
backend/crates/api/src/auth/: extractor.rs  jwt.rs  middleware.rs  mod.rs  provision.rs  tenant.rs
backend/crates/api/src/auth/test_keys/: test_rsa_private.pem  test_rsa_public.pem
backend/crates/api/src/chat/: mod.rs  retrieval.rs  streaming.rs
backend/crates/api/src/llm/: byok.rs  mod.rs  provider.rs
backend/crates/api/src/middleware/: cors.rs  mod.rs  rate_limit.rs  rls.rs
backend/crates/api/src/openapi/: mod.rs  schemas.rs
backend/crates/api/src/rbac/: check.rs  mod.rs  model.rs
backend/crates/api/src/reconcile/: backfill.rs  mod.rs  openfga.rs  qdrant.rs
backend/crates/api/src/routes/: acl.rs  chat.rs  documents.rs  graph.rs  metering.rs  mod.rs  settings.rs  tenant_members.rs  tenants.rs  users.rs  workspace_auth.rs  workspaces.rs  ws_members.rs
backend/crates/api/tests/: acl_routes.rs  chat_routes.rs  cleanup_routes.rs  document_routes.rs  documents_acl.rs  graph_routes.rs  metering.rs  metering_routes.rs  openapi.rs  phase4_metrics.rs  pool_role.rs  rbac_check.rs  rebac_e2e.rs  reconcile_openfga.rs  reconcile_qdrant.rs  rls_isolation.rs  role_status_validation.rs  schema_acl.rs  schema_chat.rs  schema_documents.rs  schema_graph.rs  schema_llm.rs  schema_rebac.rs  schema_system.rs  seed_verify.rs  settings_routes.rs  sse_durable.rs  tenant_routes.rs  workspace_routes.rs
backend/crates/api/tests/support/: authz.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: config.rs  crypto.rs  db.rs  error.rs  lib.rs  status.rs
backend/crates/core/src/qdrant/: mod.rs  store.rs
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: chunking.rs  embedding.rs  graph.rs  job.rs  lib.rs  main.rs  ocr.rs  pdf_parser.rs  qdrant_writer.rs  queue.rs  reconcile_loop.rs  relay.rs  retention.rs  storage.rs  sweeper.rs
backend/crates/worker/tests/: concurrency.rs  phase4_metrics.rs  process_job_retry.rs  qdrant_writer.rs  reconcile_loop.rs  relay.rs  retention.rs  select_embedder.rs  select_graph_extractor.rs  sweeper.rs
backend/migrations/: 20260101000000_init.sql  20260617124018_identity_and_tenant.sql  20260617132425_rls_tenants_table.sql  20260617143508_workspaces.sql  20260617143700_documents.sql  20260617143822_graph_entities.sql  20260617144046_chat.sql  20260617144756_acl.sql  20260617145246_system_tracking.sql  20260617145935_rls_apply_all.sql  20260618100000_tenant_llm_config.sql  20260618110000_graph_idempotency_and_llm.sql  20260618130000_tenant_llm_config_encrypted_keys.sql  20260622000000_rebac_relation_tuples.sql  20260623100000_ingest_outbox.sql  20260623101000_ingest_jobs_claim.sql  20260623102000_graph_node_documents.sql  20260623103000_document_chunks_pages.sql  20260624000000_canonical_roles_and_statuses.sql  20260624010000_cleanup_retention_indexes.sql  20260624020000_phase_1_security_authorization.sql  20260702000000_openfga_cutover_drop_resource_acl.sql
backend/tests/fixtures/: fixture_openfga_backfill.sql
docs/: API_INVENTORY.md  AUDIT_ACTION_ITEMS.md  AUDIT_PRE_FRONTEND.md  DELETE_CANDIDATES.md  DEV_QUICKSTART.md  FRONTEND_API_CONTRACT.md  FRONTEND_ARCHITECTURE.md  FRONTEND_READINESS.md  GMRAG2_Project_Management.xlsx  PHASE0_5_REPORT.md  PHASE0_VERIFICATION_REPORT.md  PHASE1_REPORT.md  PHASE2_REPORT.md  PHASE3_REPORT.md  PHASE4_REPORT.md  PHASE5_REPORT.md  PM_REBASE_T70_T82.md  REPOSITORY_HYGIENE_AUDIT.md  SYSTEM_OVERVIEW.md  T85_IMPLEMENTATION_PLAN.md  phase_3_requirement.md  plan.md
docs/Pre/: RAG_DATAFLOW.md  RAG_FIX_PLAN.md  RAG_SCALABILITY_AUDIT.md  RAG_SECURITY_AUDIT.md  RAG_SYSTEM_AUDIT.md
docs/architecture/: API_CONTRACT.md  DB_SCHEMA.md  SYSTEM_OVERVIEW.md
docs/progress/: AUDIT_PRE_FRONTEND.md  BATCH1_SUMMARY.md  BATCH2A_SUMMARY.md  BATCH2B_SUMMARY.md  BATCH3_SUMMARY.md  BATCH4_SUMMARY.md  BATCH5A_SUMMARY.md  BATCH5B_SUMMARY.md  BATCH5C_SUMMARY.md  BATCH6A_SUMMARY.md  BATCH6B_SUMMARY.md  BATCH6C_SUMMARY.md  HOTFIX_BATCH2B.md  HOTFIX_PRE_BATCH5.md  PRE_BATCH2.md  T10.md  T11.md  T12.md  T13.md  T14.md  T15.md  T16.md  T17.md  T18.md  T19.md  T1_T4.md  T20.md  T21.md  T22.md  T23.md  T24.md  T25.md  T26.md  T27.md  T28.md  T29.md  T30.md  T31.md  T32.md  T33.md  (+52 more)
frontend/: .dockerignore  .gitignore  auth.ts  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AclShareDialog.tsx  TenantSwitcher.tsx  providers.tsx  tenant-bootstrapper.tsx
frontend/components/ui/: select.tsx
frontend/lib/: acl.ts
frontend/lib/api/: auth-token.client.ts  auth-token.server.ts  client.ts  errors.ts  schema.d.ts  tenant-resolver.ts
frontend/lib/store/: tenant.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  LanguageSwitcher.tsx  Sidebar.tsx  StatusBadge.tsx  UploadDropzone.tsx  graph-lattice.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/i18n/: config.ts  dictionary.ts  navigation.ts  request.ts
frontend/src/i18n/messages/: en.json  vi.json
frontend/src/lib/api/: upload.ts
frontend/src/lib/hooks/: useDocuments.ts  (+3 more)
infra/: backend.Dockerfile  docker-compose.backfill.yml  docker-compose.validation.yml  docker-compose.yml  frontend.Dockerfile
infra/keycloak/: bootstrap.sh  seed-users.sh
infra/minio/: init.sh
infra/openfga/: model.fga  model.fga.yaml
infra/postgres/: init.sql  seed.sql
scripts/: ensure-openfga-db.ps1  openfga-bootstrap.ps1  setup-ollama.ps1
(+8 files in other folders)
