[package]
name = "gmrag-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "gmrag HTTP API (axum) entry point."

[[bin]]
name = "gmrag-api"
path = "src/main.rs"

[dependencies]
gmrag-core = { path = "../core" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
