[package]
name = "gmrag-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "gmrag HTTP API (axum) entry point."

[lib]
path = "src/lib.rs"

[[bin]]
name = "gmrag-api"
path = "src/main.rs"

[dependencies]
gmrag-core = { path = "../core" }

tokio.workspace = true
axum = { workspace = true, features = ["macros", "multipart"] }
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures = "0.3"
async-stream = "0.3"
qdrant-client.workspace = true
tiktoken-rs = "0.11"

# T58: document upload → S3 object storage + Redis ingest-job enqueue.
async-trait = "0.1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
redis = { version = "0.25", features = ["tokio-comp", "aio"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
