[package]
name = "gmrag-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Shared core utilities for gmrag backend: config, errors, db pool."

[lib]
path = "src/lib.rs"

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
tokio.workspace = true
qdrant-client.workspace = true
