[package]
name = "gmrag-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "gmrag background worker (ingestion, GraphRAG jobs)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "gmrag-worker"
path = "src/main.rs"

[dependencies]
gmrag-core = { path = "../core" }

tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

dotenvy.workspace = true
uuid.workspace = true

# T42: build PointStruct/Payload for dual-write upserts.
qdrant-client.workspace = true

redis = { version = "0.25", features = ["tokio-comp", "aio"] }
async-trait = "0.1"

aws-sdk-s3 = "1"
aws-credential-types = "1"

pdf-extract = "0.7"
lopdf = "0.34"

# T39: Ollama /api/embed HTTP client + batched concurrency.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"

# T38: tiktoken cl100k tokenizer + text-splitter for chunking.
tiktoken-rs = "0.11"
text-splitter = { version = "0.30", features = ["tiktoken-rs"] }

# T37: OCR fallback — base64 encoding for Ollama vision API images.
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
